...
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" momentary="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bT5-88-ME5">
                    <rect key="frame" x="70" y="196" width="200" height="29"/>
                    <segments>
                        <segment title="ffff"/>
                        <segment title="qqq"/>
                        <segment title="2"/>
                    </segments>
                </segmentedControl>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <point key="canvasLocation" x="411" y="308"/>
...
