...

@implementation TableGroupViewController {
    NSArray* dataSource;;
}

- (void)viewDidLoad {
    dataSource = @[@"register nib",@"register no xib"];
    self.tableView.separatorInset = UIEdgeInsetsMake(0.f, 100.f, 0.f, 0.f);
}
#pragma mark uitabkeview datasource

- (NSInteger)tableView:(UITableView *)tableView numberOfRowsInSection:(NSInteger)section{
    return dataSource.count;
...
